support delete sql

--- a/volume/samp_app/app/resources/questions/views/questiontop.jl.html
+++ b/volume/samp_app/app/resources/questions/views/questiontop.jl.html
@@ -3,7 +3,8 @@
 <ul>
    <%
       @foreach(@vars(:questions)) do question
-         "<li>$(question.question) by $(question.author) delete"
+         "<li>$(question.question) by $(question.author) 
+            <a href=questions/delete/$(get(question.id))>delete</a>"
       end
    %>
    
